# Peplink

./: .gitignore  README.md  start_peplink.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pttep_alignment/include/pttep_alignment/pttep_alignment/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/pttep_alignment/include/pttep_alignment/pttep_alignment/srv/: calculate_transformation.hpp
install/pttep_alignment/include/pttep_alignment/pttep_alignment/srv/detail/: calculate_transformation__functions.h  calculate_transformation__rosidl_typesupport_introspection_c.h  calculate_transformation__traits.hpp  calculate_transformation__type_support.c  calculate_transformation__type_support.cpp
install/pttep_alignment/local/lib/python3.10/dist-packages/pttep_alignment/: _pttep_alignment_s.ep.rosidl_typesupport_c.c  _pttep_alignment_s.ep.rosidl_typesupport_fastrtps_c.c  _pttep_alignment_s.ep.rosidl_typesupport_introspection_c.c
install/pttep_alignment/local/lib/python3.10/dist-packages/pttep_alignment-1.2.0-py3.10.egg-info/: SOURCES.txt  top_level.txt
install/pttep_alignment/local/lib/python3.10/dist-packages/pttep_alignment/srv/: _calculate_transformation.py  _calculate_transformation_s.c
install/pttep_alignment/share/ament_index/resource_index/parent_prefix_path/: pttep_alignment
install/pttep_alignment/share/pttep_alignment/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pttep_alignment/share/pttep_alignment/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_pttep_alignment__rosidl_generator_cExport-noconfig.cmake  export_pttep_alignment__rosidl_generator_cppExport.cmake  export_pttep_alignment__rosidl_typesupport_fastrtps_cppExport.cmake  pttep_alignmentConfig.cmake  pttep_alignment__rosidl_typesupport_cppExport-noconfig.cmake  pttep_alignment__rosidl_typesupport_introspection_cppExport-noconfig.cmake  pttep_alignment__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/pttep_alignment/share/pttep_alignment/srv/: CalculateTransformation_Response.msg
log/: latest_build
src/: analyze_gps_data.py  data
src/gps_umd/gps_tools/: CMakeLists.txt
src/gps_umd/gps_tools/launch/: run_gps.launch.py
src/gps_umd/gps_tools/src/: utm_odometry_component.cpp  utm_odometry_to_navsatfix_component.cpp
src/peplink_gps_node/: CMakeLists.txt  README.md  package.xml
src/peplink_gps_node/launch/: gps_system.launch.py
src/peplink_gps_node/src/: peplink_gps_node.cpp
src/pttep_alignment/: CMakeLists.txt  README.md
src/pttep_alignment/src/: alignment_node.cpp  test_data.py  test_data_with_origin.py
src/utm_local_odom/: CMakeLists.txt  package.xml
src/utm_local_odom/src/: utm_local_odom_node.cpp
